[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/iso_box.png" type="Texture" id=1]
[ext_resource path="res://scripts/GridSpace.gd" type="Script" id=2]

[node name="GridSpace" type="Area2D"]
modulate = Color( 0.368627, 0.368627, 0.368627, 1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( -0.487695, 0.806808 )
polygon = PoolVector2Array( -32.8074, 0, 0, -9.91562, 32.8074, 0, 0, 9.91562 )

[connection signal="area_shape_entered" from="." to="." method="_on_GridSpace_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_GridSpace_area_shape_exited"]
[connection signal="input_event" from="." to="." method="_on_GridSpace_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_GridSpace_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_GridSpace_mouse_exited"]
